fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -202,7 +202,7 @@ a {
 .toggler {
 	display: flex;
 	align-items: center;
-	margin-left: 1.5em;
+	margin-left: 1em;
 	opacity: 0.8;
   }
   
@@ -231,10 +231,6 @@ a {
   }
 
   @media (min-width: 400px) {
-	.toggler {
-		margin-left: 2em;
-	}
-
 	.toggler-slider {
 		width: 30px;
 		height: 16px;
@@ -247,6 +243,12 @@ a {
 		width: 16px;
 	}
   }
+
+  @media (min-width: 800px) {
+	.toggler {
+		margin-left: 2em;
+	}
+}
   
   nav.dark .toggler-slider {
 	border-color: var(--color-light-brown2);
@@ -1231,7 +1233,7 @@ a {
 	flex-direction: column;
 	gap: 1em;
 	padding-bottom: 2em;
-	width: 24em;
+	width: 26em;
 }
 
 @media (min-width: 600px) {
